fix: made constant spacing for all modules + added a Divider component

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -40,3 +40,8 @@ $layout-width: 1070px;
 $layout-breakpoint-sm: 685px;
 $layout-breakpoint-md: 960px;
 $layout-breakpoint-lg: 1100px;
+
+// Margins & paddings
+$margin-containers : 0px;
+$padding-containers : 0px;
+$margin-divider : 3.5em;
