--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -41,7 +41,7 @@ h1 {
 h2 {
   font-size: $typographic-base-font-size * 1.6875;
   @include line-height(1.5);
-  @include margin-top(2.5);
+  @include margin-top($margin-containers);
   @include margin-bottom(0);
   color: $color-base;
 }
@@ -187,10 +187,12 @@ figcaption {
   border: 1px solid darken($color-secondary, 20%);
 }
 .text_light {
-  margin-top: 13px;
   color: $color-gray;
   font-weight: 500;
-  font-size: 17px;
+  font-size: $typographic-base-font-size;
+  @include line-height(1);
+  @include margin-top(1);
+  @include margin-bottom(1);
 }
 .landing_title {
   text-align: center;
