--- a/src/components/Landing/Clients/Clients.module.scss
+++ b/src/components/Landing/Clients/Clients.module.scss
@@ -4,9 +4,7 @@
 
 .container {
   width: 100%;
-  margin-top: 2em;
-  padding-bottom: 1em;
-  border-bottom: solid 1px $color-gray-border;
+  padding-bottom: $padding-containers;
   text-align: center;
 
   .logos {
