--- a/src/components/Landing/HeroModule/HeroModule.module.scss
+++ b/src/components/Landing/HeroModule/HeroModule.module.scss
@@ -12,7 +12,7 @@
 
 .hero__module__title {
   color: var(--primary-color);
-  margin: 25px 0px 0px 0px;
+  margin-top: $margin-containers;
   font-size: 63px;
   width: 100%;
   padding-top:0.7em;
